Fix alignment of navbar and style

--- a/src/components/NavBar/Navbar2.css
+++ b/src/components/NavBar/Navbar2.css
@@ -4,18 +4,18 @@
   font-family: 'Teko', sans-serif;
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 .logo {
   cursor: pointer;
-  color: white;
   font-size: xx-large;
   font-weight: 700;
   margin-right: auto;
 }
 
-.nav__links {
-  text-decoration: none;
+a {
+  color: white;
 }
 
 .nav__links li {
@@ -25,8 +25,6 @@
 
 .nav__links li a {
   transition: all 0.5s ease 0s;
-  text-decoration: none;
-  color: white;
 }
 
 .nav__links li a:hover {
